hero section fix, hid carousel buttons on mobile

--- a/style.css
+++ b/style.css
@@ -54,12 +54,12 @@ a:hover{
 
 .carousel-caption h1 {
     font-size: 3rem;
-    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7); /* Add text shadow for better readability */
+    /* text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7); Add text shadow for better readability */
 }
 
 .carousel-caption p {
     font-size: 1.25rem;
-    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7); /* Same text shadow for consistency */
+    /* text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7); Same text shadow for consistency */
 }
 
 
